--- a/BFKSupportApp/app/src/main/res/layout/activity_main.xml
+++ b/BFKSupportApp/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/MainToCal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="60dp"
+        android:text="Calculator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/MainStickBug"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="StickBug"
+        app:layout_constraintEnd_toEndOf="@+id/MainToCal"
+        app:layout_constraintStart_toStartOf="@+id/MainToCal"
+        app:layout_constraintTop_toBottomOf="@+id/MainToCal" />
 </androidx.constraintlayout.widget.ConstraintLayout>
