--- a/BFKSupportApp/app/src/main/res/layout/activity_write_new_entry.xml
+++ b/BFKSupportApp/app/src/main/res/layout/activity_write_new_entry.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,4 +11,49 @@
     android:layout_height="match_parent"
     tools:context=".WriteNewEntryActivity">
 
+    <Button
+        android:id="@+id/WriteNewEntryAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="348dp"
+        android:text="Add New Entry"
+        app:layout_constraintEnd_toEndOf="@+id/WriteNewEntryDesc"
+        app:layout_constraintStart_toStartOf="@+id/WriteNewEntryDesc"
+        app:layout_constraintTop_toBottomOf="@+id/WriteNewEntryDesc" />
+
+    <EditText
+        android:id="@+id/WriteNewEntryName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="76dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/WriteNewEntryDesc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:ems="10"
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        app:layout_constraintEnd_toEndOf="@+id/WriteNewEntryName"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/WriteNewEntryName"
+        app:layout_constraintTop_toBottomOf="@+id/WriteNewEntryName" />
+
+    <ImageView
+        android:id="@+id/WriteNewEntryReturn"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_revert" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
