Character creation upgrade.
Now in character creation user is directed to new page to add history and species info.

--- a/BFKSupportApp/app/src/main/res/layout/activity_write_new_entry.xml
+++ b/BFKSupportApp/app/src/main/res/layout/activity_write_new_entry.xml
@@ -101,10 +101,16 @@
             android:text="Instrumenta" />
 
         <RadioButton
-            android:id="@+id/WriteNewDataRadioAttributum"
+            android:id="@+id/WriteNewDataRadioPerk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Attributum" />
+            android:text="Perk" />
+
+        <RadioButton
+            android:id="@+id/WriteNewDataRadioEffect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Effect" />
 
         <RadioButton
             android:id="@+id/WriteNewDataRadioMateria"
