--- a/BFKSupportApp/app/src/main/res/layout/activity_calculator.xml
+++ b/BFKSupportApp/app/src/main/res/layout/activity_calculator.xml
@@ -1,58 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollViewAbc"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Calculator">
+    tools:context=".CalculatorActivity">
 
   <EditText
-      android:id="@+id/calNumInput1"
+      android:id="@+id/CalNumInputSTR"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="36dp"
+      android:layout_marginTop="24dp"
       android:ems="10"
-      android:hint="First Number"
+      android:hint="Character's STR"
       android:inputType="number"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
   <EditText
-      android:id="@+id/CalNumInput2"
+      android:id="@+id/CalNumInputWeaponSkill"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="32dp"
       android:ems="10"
-      android:hint="Second Number"
+      android:hint="Character's weapon skill"
       android:inputType="number"
-      app:layout_constraintEnd_toEndOf="@+id/calNumInput1"
+      app:layout_constraintEnd_toEndOf="@+id/CalNumInputSTR"
       app:layout_constraintHorizontal_bias="0.0"
-      app:layout_constraintStart_toStartOf="@+id/calNumInput1"
-      app:layout_constraintTop_toBottomOf="@+id/calNumInput1" />
-
-  <Button
-      android:id="@+id/CalAdd"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="104dp"
-      android:text="Add"
-      app:layout_constraintEnd_toEndOf="@+id/CalNumInput2"
-      app:layout_constraintStart_toStartOf="@+id/CalNumInput2"
-      app:layout_constraintTop_toBottomOf="@+id/CalNumInput2" />
-
-  <TextView
-      android:id="@+id/CalNumOutput"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="96dp"
-      android:includeFontPadding="false"
-      android:textSize="60sp"
-      app:layout_constraintEnd_toEndOf="@+id/CalAdd"
-      app:layout_constraintHorizontal_bias="0.516"
-      app:layout_constraintStart_toStartOf="@+id/CalAdd"
-      app:layout_constraintTop_toBottomOf="@+id/CalAdd" />
+      app:layout_constraintStart_toStartOf="@+id/CalNumInputSTR"
+      app:layout_constraintTop_toBottomOf="@+id/CalNumInputSTR" />
 
   <Button
       android:id="@+id/CalBack"
@@ -63,4 +48,104 @@
       android:text="back"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent" />
+
+  <EditText
+      android:id="@+id/CalNumInputSPD"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="24dp"
+      android:ems="10"
+      android:hint="Character's SPD"
+      android:inputType="number"
+      app:layout_constraintEnd_toEndOf="@+id/CalNumInputWeaponSkill"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="@+id/CalNumInputWeaponSkill"
+      app:layout_constraintTop_toBottomOf="@+id/CalNumInputWeaponSkill" />
+
+  <EditText
+      android:id="@+id/CalNumInputEnemySpeed"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="24dp"
+      android:ems="10"
+      android:hint="Enemy's SPD"
+      android:inputType="number"
+      app:layout_constraintEnd_toEndOf="@+id/CalNumInputSPD"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="@+id/CalNumInputSPD"
+      app:layout_constraintTop_toBottomOf="@+id/CalNumInputWeaponDMGMult" />
+
+  <EditText
+      android:id="@+id/CalNumInputEnemyArmor"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="24dp"
+      android:ems="10"
+      android:hint="Enemy's Armor"
+      android:inputType="number"
+      app:layout_constraintEnd_toEndOf="@+id/CalNumInputEnemySpeed"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="@+id/CalNumInputEnemySpeed"
+      app:layout_constraintTop_toBottomOf="@+id/CalNumInputEnemySpeed" />
+
+  <Switch
+      android:id="@+id/CalAutohitSwitch"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="24dp"
+      android:text="AutoHit"
+      app:layout_constraintEnd_toEndOf="@+id/CalNumInputEnemyArmor"
+      app:layout_constraintHorizontal_bias="0.56"
+      app:layout_constraintStart_toStartOf="@+id/CalNumInputEnemyArmor"
+      app:layout_constraintTop_toBottomOf="@+id/CalNumInputEnemyArmor" />
+
+  <Button
+      android:id="@+id/CalAdd"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="24dp"
+      android:text="calculate"
+      app:layout_constraintEnd_toEndOf="@+id/CalAutohitSwitch"
+      app:layout_constraintStart_toStartOf="@+id/CalAutohitSwitch"
+      app:layout_constraintTop_toBottomOf="@+id/CalAutohitSwitch" />
+
+  <TextView
+      android:id="@+id/CalDmgOutput"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="40dp"
+      android:text="Damage here"
+      android:textSize="20sp"
+      app:layout_constraintEnd_toEndOf="@+id/CalHitOutput"
+      app:layout_constraintHorizontal_bias="0.518"
+      app:layout_constraintStart_toStartOf="@+id/CalHitOutput"
+      app:layout_constraintTop_toBottomOf="@+id/CalHitOutput" />
+
+  <TextView
+      android:id="@+id/CalHitOutput"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="20dp"
+      android:text="If Does Hit Here "
+      android:textSize="20sp"
+      app:layout_constraintEnd_toEndOf="@+id/CalAdd"
+      app:layout_constraintHorizontal_bias="0.475"
+      app:layout_constraintStart_toStartOf="@+id/CalAdd"
+      app:layout_constraintTop_toBottomOf="@+id/CalAdd" />
+
+  <EditText
+      android:id="@+id/CalNumInputWeaponDMGMult"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="24dp"
+      android:ems="10"
+      android:hint="Weapon Damage"
+      android:inputType="number|numberDecimal"
+      app:layout_constraintEnd_toEndOf="@+id/CalNumInputSPD"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="@+id/CalNumInputSPD"
+      app:layout_constraintTop_toBottomOf="@+id/CalNumInputSPD" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
